Code base restructure